Changes in Version 1.1.1-2
	o More support for different edge colors added. Through the new 'addTrans' function, transparancy is automatically added to the edge color comparable with the edge strength
 o Argument lists can now be nested. Lower level arguments take precedence over higher nested arguments.
 o Defaults added. The options "qgraph" or "qgraphDefaults" can be assigned a list with default arguments for qgraph()

Changes in Version 1.1.1-1
	o Edge colors can now be overwritten for specific edges. If edge.color is a vector, NA indicate the edge color is determined by default

Changes in Version 1.1.1-9
	o Fixed a bug where edge colors incorecctly returned an error stating the length was wrong
	o Fixed a bug where incorrect edge labels where placed on edges.
	o Midpoint of straigth edges for placing edge labels is now based on the center of the edge, not on the center between the two connected nodes.

Changes in Version 1.1.1-8
	o Fixed a bug where specifying the wrong number of edge labels resulted in an error

Changes in Version 1.1.1-7
	o Edge labels are now plotted only for visible edges
	o 'transparency' now defaults to FALSE if 'bg' is a color other than 'white'
	o 'transparancy' is now matched by trans argument as well
	o The background of edge labels is now the same as the background color by default
	o Edge labels are now colored the same as the edge by default

Changes in Version 1.1.1-6
	o Fixed a bug where border colors weren't repeated for all nodes.
	o For more consistency in argument names 'border.colors' has been renamed to 'border.color' and 'lcolor' has been renamed to 'label.color'

Changes in Version 1.1.1-5
	o Fixed a bug in Cent2EdgeNode not restoring mar, it can now be called outside of qgraph

Changes in Version 1.1.1-4
	o curve now proportional to node size of 5

Changes in Version 1.1.1-3
	o Curve now proportional to node of size 10

Changes in Version 1.1.1-2