@@ -1,7 +1,12 @@
 Changes in Version 1.1.1-2
 	o More support for different edge colors added. Through the new 'addTrans' function, transparancy is automatically added to the edge color comparable with the edge strength
  o Argument lists can now be nested. Lower level arguments take precedence over higher nested arguments.
- o Defaults added. The options "qgraph" or "qgraphDefaults" can be assigned a list with default arguments for qgraph()
+ o Defaults added. The options "qgraph" can be assigned a list with default arguments for qgraph()
+ o 'addTrans' has been renamed to 'fade' 
+ o Added argument for controlling default positive edge color: posCol
+ o Added argument for controlling default negative edge color: negCol
+ o trans now once again only defaults to TRUE if bg=TRUE.
+ o Custom colors now fade to the background color if fade=TRUE.
 
 Changes in Version 1.1.1-1
 	o Edge colors can now be overwritten for specific edges. If edge.color is a vector, NA indicate the edge color is determined by default
